[metadata]
name = HuobiAsyncWebsocket
version = 1.2.1
author = Antas
description = Asynchronous huobi websocket SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/monk-after-90s/HuobiAsyncWebsocket
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
[options]
packages = find:
python_requires = >=3.7
install_requires =
    AsyncWebsocketStreamInterface==1.0.0


